--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 body {
-    background: url(images/bg.jpg);
+    background: url(images/bg.webp);
     background-size: cover;
     background-position: center;
     display: flex;
